[package]
name = "markthis"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8.0"
lambda_http = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
rusoto_credential = "0.48.0"
chrono = "0.4"
openssl = { version = "0.10", features = ["vendored"] } #
aws_lambda_events = "0.8.5"

[[bin]]
name = "upload"
path = "src/bin/upload_handler.rs"

[[bin]]
name = "split"
path = "src/bin/split_handler.rs"
